@@ -1,6 +1,8 @@
 44
 ================
 
+17/12/20 Temporarily roll back #892 due to unexpected side effects
+17/12/20 Use case insensitive sort when regenerating person flags
 16/12/20 Make "regenerate person flags" actually check and regenerate
 15/12/20 Fix serious performance bug when selecting media #892
 15/12/20 Do not allow media links to be emailed #892
